--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Final Project - Crafty JS</title>
+	<!--    FontAwesome-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="styleSheet" type="text/css" href="_css/master.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
@@ -15,7 +19,7 @@
     <div id="modalSplash" class="modalBox">
         <div id="splashStart" class="splash">
             <p class="black">
-                 This game requires that the display be set at a minimum resolution of SXGA (1280x1024), full 1080P is preferred. Otherwise, you will not be able to view all the neccessary buttons and window displays. If unable, please zoom out (-) in your browser window to view all elements.
+                 <a href="#openSettings"><i class="fa fa-cog red" aria-hidden="true"></i></a> Administrative Game Settings
             </p>
             <header>
         		<h1>Galaga Derby</h1>
@@ -27,10 +31,72 @@
                 <h2>Click on the START button below to start the game</h2>
             </div>
             <div>
-                <button id="btnStart">START</button>
+                <input id="btnStart" type="button" value="START" class="btn btn-primary splashButton" />
             </div>
+			<div id="openSettings" class="black">
+				<form>
+					<h2>Game Settings</h2>
+					<fieldset>
+						<legend>
+							Graphics Display Settings
+						</legend>
+						<div>
+							<p>Game Canvas Width: </p>
+							<input id="canvasWidth" type="number" placeholder="Enter # in Pixels" value="900" />
+						</div>
+						<div>
+							<p>Game Canvas Height: </p>
+							<input id="canvasHeight" type="number" placeholder="Enter # in Pixels" value="900" />
+						</div>
+						<div>
+							<p>Game Canvas Scale: </p>
+							<input id="canvasScale" type="number" placeholder="Enter #. 1 = 100%" value="1" />
+						</div>
+						<div>
+							<p>Player On-Center in View: </p>
+							<input id="viewportFollow" type="checkbox" />
+						</div>
+					</fieldset>
+					<fieldset>
+						<legend>
+							Game Difficulty Settings
+						</legend>
+						<div>
+							<p>Max Number of Asteroids: </p>
+							<input id="maxAsteroids" type="number" placeholder="Enter Max #" value="3" />
+						</div>
+						<div>
+							<p>Max Speed of Asteroids: </p>
+							<input id="maxAsteroidSpeed" type="number" placeholder="Enter Max #" value="5" />
+						</div>
+						<div>
+							<p>Max Number of Enemies: </p>
+							<input id="maxEnemies" type="number" placeholder="Enter Max #" value="1" />
+						</div>
+						<div>
+							<p>Max Speed of Enemies: </p>
+							<input id="maxEnemySpeed" type="number" placeholder="Enter Max #" value="5" />
+						</div>
+						<div>
+							<p>Player Hit Points: </p>
+							<input id="hitPointPlayer" type="number" placeholder="Enter Hit Points" value="30" />
+						</div>
+						<div>
+							<p>Enemy Hit Points: </p>
+							<input id="hitPointEnemy" type="number" placeholder="Enter Hit Points" value="3" />
+						</div>
+					</fieldset>
+					<p>
+						<input type="button" value="Click to Set Settings" class="btn btn-primary" onclick="setSettings()" />
+					</p>
+					<p>
+						<a href="#close" title="Close" class="btn btn-success">Click to Close Window</a>
+					</p>
+				</form>
+			</div>
+
             <!--	Footer Copyright-->
-            <footer>Copyright &copy; Gabe</footer>
+            <footer class="black">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
         </div>
         <!-- Splash Screen for Level Change -->
         <div id="splashLevel" class="splash">
@@ -44,14 +110,16 @@
                 </li>
 
             </ol>
-            <input id="btnNewLevel" type="button" value="Start Next Level" />
+            <input id="btnNewLevel" type="button" value="Start Next Level"  class="btn btn-primary splashButton" />
+			<!--	Footer Copyright-->
+            <footer class="black">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
         </div>
         <div id="splashEnd" class="splash">
             <header>
         		<h1>Galaga Derby</h1>
         	</header>
             <div>
-                <h2 id="endOutput"></h2>
+                <h2 id="endOutput" class="black"></h2>
             </div>
             <div>
                 <h2>Game Over. Hope you had fun.</h2>
@@ -61,22 +129,26 @@
                 <h2>Click on the START button below if you wish to play again</h2>
             </div>
             <div>
-                <button id="btnReStart">START</button>
+                <input id="btnReStart" type="button" value="START" class="btn btn-primary splashButton" />
             </div>
-            <!--	Footer Copyright-->
-            <footer>Copyright &copy; Gabe</footer>
+			<!--	Footer Copyright-->
+            <footer class="black">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
         </div>
     </div>
+
     <main id="game" class="gameMain">
 
     </main>
 
-<!--	Footer Copyright-->
-<footer class="">
-    <div class="">
-        <div class="">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</div>
-    </div>
-</footer>
+	<!--	Footer Copyright-->
+	<footer class="">
+	    <div class="">
+	        <div class="">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</div>
+	    </div>
+	</footer>
+	<!-- <div class="">
+		Image to Use: <img id="galaxyBackground" src="_images/galaxy.jpg" alt="Galaxy Background Hidden" />
+	</div> -->
 	<script src="_scripts/scripts.js"></script>
     <script src="_scripts/components.js"></script>
     <script src="_scripts/scenes.js"></script>
