Added Second Galaga Ship to dock with current ship. Added Flying Stars for PowerUp's to capture.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         		<h1>Galaga Derby</h1>
         	</header>
             <div class="">
-                <h3>You player character is the Galaga Ship. Your objective in stage one is to clear all Asteriods</h3>
+                <h3>You player character is the Galaga Ship. Your objective in stage one is to clear all Asteriods. Golden Star's are Power UP's. It will add additional hit points to your ship.</h3>
 				<h3>Game Controls</h3>
 				<ol class="black">
 					<li>
@@ -38,7 +38,7 @@
 						UP key controls Forward thrust.
 					</li>
 					<li>
-						CTRL or SHIFT controls Missile Fire - DISABLE your Sticky Key Function. Registry Modification Instructions are available at this <a href='disableStickyKeys.txt' target='_blank'>LINK</a>. 
+						CTRL or SHIFT controls Missile Fire - DISABLE your Sticky Key Function. Registry Modification Instructions are available at this <a href='disableStickyKeys.txt' target='_blank'>LINK</a>.
 					</li>
 				</ol>
             </div>
@@ -123,7 +123,7 @@
                     </div>
                     <div>
                         <p>Game Canvas Height: </p>
-                        <input id="canvasHeight" type="number" placeholder="Enter # in Pixels" value="900" />
+                        <input id="canvasHeight" type="number" placeholder="Enter # in Pixels" value="880" />
                     </div>
                     <div>
                         <p>Game Canvas Scale: </p>
