Made a bunch of changes to the game display to automatically have the viewport be a 100% of viewable. Modified all remaining variables not already done to use a master global object. Changes to CSS to allow for scrolling on modal box. Changed globally how crafty scaling works, eliminated it and added my own by multiplying all objects by scale variable. Number of other things too

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
                     </legend>
                     <div>
                         <p>Game Canvas Width: </p>
-                        <input id="canvasWidth" type="number" placeholder="Enter # in Pixels" value="1200" />
+                        <input id="canvasWidth" type="number" placeholder="Enter # in Pixels. Default MAX" value="" />
                     </div>
                     <div>
                         <p>Game Canvas Height: </p>
-                        <input id="canvasHeight" type="number" placeholder="Enter # in Pixels" value="880" />
+                        <input id="canvasHeight" type="number" placeholder="Enter # in Pixels. Default MAX" value="" />
                     </div>
                     <div>
                         <p>Game Canvas Scale: </p>
-                        <input id="canvasScale" type="number" placeholder="Enter #. 1 = 100%" value="1" />
+                        <input id="canvasScale" type="number" placeholder="Enter #. 1 = 100%" value=".6" />
                     </div>
                     <div>
                         <p>Player On-Center in View: </p>
@@ -202,6 +202,7 @@
 	</div> -->
 	<script src="_scripts/scripts.js"></script>
     <script src="_scripts/components.js"></script>
+    <script src="_scripts/scenesCommon.js"></script>
     <script src="_scripts/scenes.js"></script>
     <script src="_scripts/scenes2.js"></script>
 
