Added Explosion Animation. Fixed splash messages. Fixed warp function not working when 2nd ship added. Added down arrow key to warp function. Minor tweaks to code...

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 					<li>
 						CTRL or SHIFT controls Missile Fire - DISABLE your Sticky Key Function. Registry Modification Instructions are available at this <a href='disableStickyKeys.txt' target='_blank' class="gold">LINK</a>. Z Key will also work as a backup fire key.
 					</li>
+                    <li>
+                        <span class="red">RED</span> Galaga ship similar to the Golden Star Power Up can be captured and used as additional FirePower. Careful though, firing upon the ship will destroy it.
+                    </li>
 				</ol>
                 <h3 class="white">Notes</h3>
                 <ol class="gold">
@@ -76,11 +79,8 @@
 	                    Enemy Ships Added - Kamakazi Style. Small Ships have 1 Hit Point. Large Ships Hit Points are determined by game settings.
 	                </li>
 					<li>
-						Warp Capability Added - Press SPACE Bar Key - Randomly disappear and reappear on another part of the screen. But watch out, you could warp into another object causing damage. Use at your own Risk.
+						Warp Capability Added - Press SPACE Bar or DOWN Arrow Key - Randomly disappear and reappear on another part of the screen. But watch out, you could warp into another object causing damage. Use at your own Risk.
 					</li>
-                    <li>
-                        RED Galaga ship similar to the Golden Star Power Up can be captured and used as additional FirePower. Careful though, firing upon the ship will destroy it.
-                    </li>
 					<li>
 						Much higher level of forward perpetual motion due to forward thrust.
 					</li>
@@ -136,7 +136,7 @@
                     </div>
                     <div>
                         <p>Game Canvas Scale: </p>
-                        <input id="canvasScale" type="number" placeholder="Enter #. 1 = 100%" value=".6" />
+                        <input id="canvasScale" type="number" placeholder="Enter #. 1 = 100%" value="0.6" />
                     </div>
                     <div>
                         <p>Player On-Center in View: </p>
